--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,9 @@
       <p>esta ejecutandose y sera una gran aplicacion. 🎉</p>
       <br>
       <span style="color: darkcyan;">Saludo: {{ saludo }}</span>
+      <br>
+      <app-empleados></app-empleados>
+      <app-empleado></app-empleado>
+<app-empleado></app-empleado>
+<app-empleado></app-empleado>
     
