--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,1 +1,4 @@
-<p>Aqui iria un empleado!</p>
+<p>Nombre del empleado: {{ nombre }}</p>
+<p>Nombre del empleado: {{ apellido }}</p>
+<p>Nombre del empleado: {{ edad < 18 ? "Menor de edad" : "Mayor de edad" }}</p>
+<p>Nombre del empleado: {{ empresa }}</p>
