--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,4 +1,17 @@
 <p>Nombre del empleado: {{ nombre }}</p>
 <p>Nombre del empleado: {{ apellido }}</p>
 <p>Nombre del empleado: {{ edad < 18 ? "Menor de edad" : "Mayor de edad" }}</p>
-<p>Nombre del empleado: {{ empresa }}</p>
+<p>Nombre del empleado: {{ empresa.value }}</p>
+
+Introduce la empresa <input type="text" #empresa>
+<br><br>
+<input type="button" value="Actualizar" (click)="llamaEmpresa(empresa.value)">
+<br><br>
+<!-- Introduce el nombre <input type="text" #nombre (keyup)="0" [disabled]="habilitacionCuadro"> -->
+Introduce el nombre <input type="text" [(ngModel)]=" nombre">
+<br><br>
+{{ textoDeRegistro }}
+<br>
+Registrado: <input type="radio" name="nRegistro" value="si" id="registro" [checked]="usuRegistrado" (click)="setUsuarioRegistrado($event)">
+No registrado: <input type="radio" name="nRegistro" value="no" id="registro" (click)="setUsuarioRegistrado($event)">
+{{getRegistroUsuario()}}
